# ChangeLog for net-analyzer/ndsad
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-analyzer/ndsad/ChangeLog,v 1.11 2014/07/27 11:41:33 phajdan.jr Exp $

  26 Jul 2014; Pawel Hajdan jr <phajdan.jr@gentoo.org> ndsad-1.33-r1.ebuild:
  x86 stable wrt bug #517108

*ndsad-1.33-r1 (14 Jul 2014)

  14 Jul 2014; Jeroen Roovers <jer@gentoo.org> +ndsad-1.33-r1.ebuild,
  +files/ndsad-1.33-conf_path.patch, +files/ndsad-1.33-gentoo.patch,
  +files/ndsad-1.33-getpid.patch, +files/ndsad-1.33-log-path.patch,
  +files/ndsad-1.33-strncpy-overflow.patch, files/ndsad.init:
  EAPI bump. Fix a buffer overflow, missing getpid include. Move sed script
  output to patch. Respect C/XXFLAGS.

  16 Feb 2013; Pacho Ramos <pacho@gentoo.org> metadata.xml:
  Cleanup due bug #96436

  16 Sep 2008; Peter Volkov <pva@gentoo.org> ndsad-1.33.ebuild:
  Some cleanups, avoid calling autotols directly, bug #226415, thank Diego
  Pettenò for report.

  22 Apr 2007; <pva@gentoo.org> ndsad-1.33.ebuild:
  Use do{conf,init}d, bug #174266. Some quotes cleanup.

  29 Oct 2006; Peter Volkov <pva@gentoo.org> ndsad-1.33.ebuild:
  Use autoools.eclass to take care of autotools stuff. Fixed bug #153255.
  Thank Evil Compile Person for report.

  27 Jun 2006; Peter Volkov <pva@gentoo.org> ndsad-1.33.ebuild:
  Removed system packages from DEPEND (autoconf/automake). Fix for bug 138202.

  19 Feb 2006; Joshua Jackson <tsunam@gentoo.org> ndsad-1.33.ebuild:
  Stable on x86; bug #123188

  17 Feb 2006; Peter Volkov <pva@gentoo.org> metadata.xml,
  ndsad-1.33.ebuild:
  Changed DESCRIPTION as upstream suggested. Added russian translation for
  longdescription in metadata.xml.

  15 Jan 2006; Peter Volkov <pva@gentoo.org> files/ndsad.conf.d,
  files/ndsad.init:
  Added copyright headers into files/ndsad.{init,conf.d}.

*ndsad-1.33 (09 Jan 2006)

  09 Jan 2006; Peter Volkov <pva@gentoo.org> +files/ndsad.conf.d,
  +files/ndsad.init, +metadata.xml, +ndsad-1.33.ebuild: