@@ -1,11 +1,11 @@
 # Copyright 1999-2014 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/net-analyzer/ndsad/ndsad-1.33-r1.ebuild,v 1.2 2014/07/27 11:41:33 phajdan.jr Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-analyzer/ndsad/ndsad-1.33-r1.ebuild,v 1.3 2014/08/10 20:58:57 slyfox Exp $
 
 EAPI=5
 inherit autotools eutils
 
-DESCRIPTION="Cisco netflow probe from libpcap, ULOG, tee/divert sources."
+DESCRIPTION="Cisco netflow probe from libpcap, ULOG, tee/divert sources"
 HOMEPAGE="http://sourceforge.net/projects/ndsad"
 SRC_URI="mirror://sourceforge/ndsad/ndsad-${PV}.tgz"
 
